[tool.poetry]
name = "form"
version = "0.1.0"
description = ""
authors = ["tuliofalcao <falcao.tulio@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.2"
flask-sqlalchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
